fixed "Trending Blog Posts" text-align

--- a/styles/Blog/blog.scss
+++ b/styles/Blog/blog.scss
@@ -77,6 +77,7 @@ main {
     color: $textColor;
     margin: 1% 0;
     font-size: 4em;
+    text-align: center;
   }
 
   .blog {
@@ -87,8 +88,8 @@ main {
     margin-bottom: 5%;
 
     .blog-title {
-        padding: 1%;
-        font-size: 2em;
+      padding: 1%;
+      font-size: 2em;
     }
 
     .blog-image {
@@ -98,32 +99,31 @@ main {
     }
 
     .blog-content {
-        font-size: 1em;
-        width: 80%;
-        margin-bottom: 5%;
+      font-size: 1em;
+      width: 80%;
+      margin-bottom: 5%;
 
-        a {
-          display: block;
-          border: 1px solid black;
-          text-decoration: none;
-          text-align: center;
-          width: 50%;
-          margin: 5% auto auto auto;
-          color: black;
-          border-radius: 0.5em;
+      a {
+        display: block;
+        border: 1px solid black;
+        text-decoration: none;
+        text-align: center;
+        width: 50%;
+        margin: 5% auto auto auto;
+        color: black;
+        border-radius: 0.5em;
 
-          &:hover {
-            border: 1px solid #363636;
-            color: #252525;
-          }
+        &:hover {
+          border: 1px solid #363636;
+          color: #252525;
         }
+      }
     }
 
     .publish-info {
-        font-size: 0.8em;
-        margin-bottom: 1%;
+      font-size: 0.8em;
+      margin-bottom: 1%;
     }
-    
   }
 }
 
@@ -171,13 +171,11 @@ footer {
           text-decoration: none;
         }
       }
-  
+
       .fa-bars {
         display: block;
       }
     }
-
-    
 
     nav {
       width: 100%;
